[package]
name = "chloebot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
serde_json = "1.0.82"
json5 = "0.4.1"
futures = "0.3"
async-std = "1.12.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
